--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 </head>
 <body>
     <nav>
-        <li>Link 1</li>
-        <li>Link 2</li>
-        <li>Link 3</li>
+        <li class="blue">Link 1</li>
+        <li class="yellow">Link 2</li>
+        <li class="orange">Link 3</li>
         <form action="#" method="get">
             <input type="search" name="search" id="search">
             <input type="submit" name="submit" id="submit">
         </form>
     </nav>
     <main class="main">
-        <h1 class="animate__animated animate__hinge">Clase 14 - Animaciones</h1>
+        <h1 class="">Clase 14 - Animaciones</h1>
         <div class="caja-1">Caja 1
             <button>Ver más</button>
         </div>
@@ -33,9 +33,9 @@
         <div class="caja-5" data-aos="flip-right">Caja 5</div>
     </main>
     <footer>
-        <div>Facebook</div>
-        <div>Twitter</div>
-        <div>Gmail</div>
+        <div class="btn-facebook">Facebook</div>
+        <div class="btn-twitter">Twitter</div>
+        <div class="btn-gmail">Gmail</div>
     </footer>
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
